[package]

name = "epoxy_frp"
description = "The Reactive Glue for Frontend Applications"
version = "0.3.1"
authors = [ "Keaton Brandt <keaton.brandt@gmail.com>" ]
repository = "https://github.com/KeatonTech/rust_reactive"
readme = "./README.md"
keywords = [ "Reactive", "FRP", "Stream", "Observable", "Rx" ]
categories = [ "asynchronous", ]
license = "MIT"

[lib]
name = "epoxy"

[workspace]
members = [
    "epoxy_macros",
    "epoxy_streams",
]

[dependencies]
epoxy_macros = {path = './epoxy_macros', version = '0.3.1'}
epoxy_streams = {path = './epoxy_streams', version = '0.3.1'}
proc-macro-hack = "0.5"