[package]
name = "epoxy_macros"
version = "0.3.1"
authors = ["Keaton Brandt <keaton.brandt@gmail.com>"]
edition = "2018"
license = "MIT"

description = "Macros used by the `epoxy_frp` library. Please use epoxy_frp instead."

[lib]
name = "epoxy_macros"
proc-macro = true

[dependencies]
epoxy_streams = { path = "../epoxy_streams", version = "0.3.1" }
syn = { version = "0.15", features = ["full", "visit"] }
lazy_static = "1.3.0"
quote = "0.6"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"