[package]
name = "reactive_macros"
version = "0.1.0"
authors = ["Keaton Brandt <keaton.brandt@gmail.com>"]
edition = "2018"

[lib]
name = "reactive_macros"
proc-macro = true

[dependencies]
reactive_streams = { path = "../reactive_streams" }
syn = { version = "0.15", features = ["full", "visit"] }
quote = "0.6"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"